# desktop-pets-rust

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
assets/pets/cat/: config.json
assets/pets/coal-balls/: config.json
assets/pets/totoro/: config.json
assets/pets/totoro-v2/: config.json
config/: config.json
src/: configPanel.ts  desktopPet.ts  gameMode.test.ts  gameMode.ts  main.ts  petLogic.test.ts  petLogic.ts  style.css  tauriApi.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  resources.rs
