[package]
name = "desktop-pets-rust"
version = "1.2.0"
description = "Tauri 桌面宠物应用"
authors = [""]
license = "ISC"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "desktop_pets_rust_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }

[dev-dependencies]
tempfile = "3"
